--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "labelworx/php-styles",
-  "description": "Tim's shared PHP style rules for PHP-CS-Fixer",
+  "description": "Label Worx shared PHP style rules for PHP-CS-Fixer",
   "license": "MIT",
   "require": {
     "friendsofphp/php-cs-fixer": "^2.0"
